--- a/Gallery.html
+++ b/Gallery.html
@@ -36,7 +36,7 @@
     <input type="text" placeholder="Search...">
     <span class="search-icon">🔍</span>
   </div>
-    <img src="images/Pic-prof.jpg" alt="Profile" class="profile-pic">
+    <img src="images/CEO.jpg" alt="Profile" class="profile-pic">
  </div>
 </header>
 
