Updated images and improved layout

--- a/Gallery.html
+++ b/Gallery.html
@@ -21,7 +21,7 @@
     <ul class="dropdown-menu">
       <li><a href="soya-flour.html">SOYA FLOUR</a></li>
       <li><a href="soya-oil.html">SOYA OIL</a></li>
-      <li><a href="Granulated Soya Protein .html">SOYA PROTEIN</a></li>
+      <li><a href="Granulated-Soya-Protein.html">SOYA PROTEIN</a></li>
       <li><a href="Full-Fat-Soya.html">FULL FAT SOYA</a></li>
       <li><a href="Fortified-Blended-Foods.html">FORTIFIED BLENDED FOODS</a></li>
     </ul>
