--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="dropdown-menu">
           <li><a href="soya-flour.html">SOYA FLOUR</a></li>
           <li><a href="soya-oil.html">SOYA OIL</a></li>
-          <li><a href="Granulated Soya Protein .html">SOYA PROTEIN</a></li>
+          <li><a href="Granulated-Soya-Protein.html">SOYA PROTEIN</a></li>
           <li><a href="Full-Fat-Soya.html">FULL FAT SOYA</a></li>
           <li><a href="Fortified-Blended-Foods.html">FORTIFIED BLENDED FOODS</a></li>
         </ul>
@@ -81,7 +81,7 @@
     <h3 class="gran">GRANULATED SOYA PROTEIN</h3>
     <p class="nut1">High-protein, meat-like texture made<br>
       <span class="span2"> from defatted soya </span></p><br>
-    <a href="Granulated Soya Protein .html">
+    <a href="Granulated-Soya-Protein.html">
       <button class="btn">Learn More  <i class="fas fa-arrow-right"></i></button>
     </a>  
   </div>
@@ -198,7 +198,7 @@
     <div class="blog-images-container">
       <img src="Images/workspace.jpeg" class="blog-img" alt="Blog Image 1" />
       <img src="Images/veggies.jpeg" class="blog-img" alt="Blog Image 2" />
-      <img src="Images/woman.jpeg" class="blog-img" alt="Blog Image 3" />
+      <img src="images/woman.jpg" class="blog-img" alt="Blog Image 3" />
       <img src="Images/corn.jpeg" class="blog-img" alt="Blog Image 4" />
     </div>
    </section>
