--- a/soya-oil.html
+++ b/soya-oil.html
@@ -21,7 +21,7 @@
       <ul class="dropdown-menu">
         <li><a href="soya-flour.html">SOYA FLOUR</a></li>
         <li><a href="soya-oil.html">SOYA OIL</a></li>
-        <li><a href="Granulated Soya Protein .html">SOYA PROTEIN</a></li>
+        <li><a href="Granulated-Soya-Protein.html">SOYA PROTEIN</a></li>
          <li><a href="Full-Fat-Soya.html">FULL FAT SOYA</a></li>
          <li><a href="Fortified-Blended-Foods.html">FORTIFIED BLENDED FOODS</a></li>
       </ul>
@@ -86,7 +86,7 @@
   </div>
 
 <div class="newsletter-footer-wrapper">
-  <section class="newsletter-section">
+  <section class="newsletter-sec tion">
     <h2 class="newsletter-heading">Subscribe to our Newsletter</h2>
     <form class="newsletter-form">
       <input
