--- a/soya-flour.html
+++ b/soya-flour.html
@@ -21,7 +21,7 @@
       <ul class="dropdown-menu">
         <li><a href="soya-flour.html">SOYA FLOUR</a></li>
         <li><a href="soya-oil.html">SOYA OIL</a></li>
-        <li><a href="Granulated Soya Protein .html">SOYA PROTEIN</a></li>
+        <li><a href="Granulated-Soya-Protein.html">SOYA PROTEIN</a></li>
          <li><a href="Full-Fat-Soya.html">FULL FAT SOYA</a></li>
          <li><a href="Fortified-Blended-Foods.html">FORTIFIED BLENDED FOODS</a></li>
       </ul>
@@ -70,7 +70,7 @@
    <div class="container1">
     <img src="images/G-S-P.png" alt="Granulated Soya Protein">
     <h3>Granulated Soya Protein</h3>
-    <a href="Granulated Soya Protein .html">View Product</a>
+    <a href="Granulated-Soya-Protein.html">View Product</a>
   </div>
 
    <div class="container2">
