Updated images and improved layout

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <div class="choose-us-container">
     <div class="choose-us-image">
-      <img src="Images/Farm.jpeg" />
+      <img src="images/Farmland.jpg" />
     </div>
 
   <div class="choose-us-content">
@@ -161,17 +161,17 @@
     <div class="line"></div>
 
     <div class="gallery-images">
-      <img src="Images/Man.jpeg" alt="Gallery Image 1" class="gallery-img" />
+      <img src="images/man.jpg" alt="Gallery Image 1" class="gallery-img" />
       <img
-        src="Images/growing-corn.jpeg"
+        src="images/growing-corn.jpg"
         alt="Gallery Image 2"
         class="gallery-img"/>
       <img
-        src="Images/tractor.jpg"
+        src="images/tractor.jpg"
         alt="Gallery Image 3"
         class="gallery-img"/>
       <img
-        src="Images/grains.jpeg"
+        src="images/grains.jpg"
         alt="Gallery Image 4"
         class="gallery-img"/>
     </div>
@@ -196,10 +196,10 @@
     </button>
 
     <div class="blog-images-container">
-      <img src="Images/workspace.jpeg" class="blog-img" alt="Blog Image 1" />
-      <img src="Images/veggies.jpeg" class="blog-img" alt="Blog Image 2" />
+      <img src="images/workplace.jpg" class="blog-img" alt="Blog Image 1" />
+      <img src="images/veggies.jpeg" class="blog-img" alt="Blog Image 2" />
       <img src="images/woman.jpg" class="blog-img" alt="Blog Image 3" />
-      <img src="Images/corn.jpeg" class="blog-img" alt="Blog Image 4" />
+      <img src="images/corn.jpg" class="blog-img" alt="Blog Image 4" />
     </div>
    </section>
        
