Updated images and improved layout

--- a/Gallery.html
+++ b/Gallery.html
@@ -9,8 +9,12 @@
 <body>
   <header>
   <div class="logo">
-    <img src="images/Logo.jpg" alt="Logo">
-    <h1>Just Integrated Farms<br>& Allied Services Ltd.</h1>
+    <a href="index.html" class="logo-link">
+      <img src="images/Logo.jpg" alt="Logo">
+    </a>
+      <a href="index.html" class="logo-link">
+        <h1>Just Integrated Farms<br>& Allied Services Ltd.</h1>
+      </a>
   </div>
 
 <nav>
@@ -47,13 +51,13 @@
   </p>
 </section>
 <section class="image-section">
-  <img class="picture1" src="images/growing-corn.jpeg">
+  <img class="picture1" src="images/growing-corn.jpg">
   <img class="picture2" src="images/farming.jpg">
-  <img class="picture3" src="images/workspace.jpeg">
+  <img class="picture3" src="images/workplace.jpg">
   <img class="picture4" src="images/veggies.jpeg">
 </section>
 <section>
-  <img class="picture5" src="images/grains.jpeg">
+  <img class="picture5" src="images/grains.jpg">
   <img class="picture6" src="images/workspace2.jpg">
   <img class="picture7" src="images/tractor.jpg">
   <img class="picture8" src="images/work.jpeg">
