--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
   <header>
   <div class="logo">
-    <img src="images/Logo.jpg" alt="Logo">
-    <h1>Just Integrated Farms<br>& Allied Services Ltd.</h1>
-  </div>
+    <a href="index.html" class="logo-link">
+      <img src="images/Logo.jpg" alt="Logo">
+    </a>
+    <a href="index.html" class="logo-link">
+      <h1>Just Integrated Farms<br>& Allied Services Ltd.</h1>
+    </a>
+   </div>
 
   <nav>
     <ul>
