--- a/soya-oil.html
+++ b/soya-oil.html
@@ -9,8 +9,12 @@
 <body>
   <header>
   <div class="logo">
-    <img src="images/Logo.jpg" alt="Logo">
-    <h1>Just Integrated Farms<br>& Allied Services Ltd.</h1>
+      <a href="index.html" class="logo-link">
+      <img src="images/Logo.jpg" alt="Logo">
+    </a>
+      <a href="index.html" class="logo-link">
+        <h1>Just Integrated Farms<br>& Allied Services Ltd.</h1>
+      </a>
   </div>
 
 <nav>
