--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     </ul>
   </li>
   <li><a href="#">Careers</a></li>
-  <li><a href="#">Contact</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
 
